@@ -40,8 +40,26 @@ dependencies {
 	// Thymeleaf 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' //
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(Test).configureEach {
+	jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec).configureEach {
+	jvmArgs += '--enable-preview'
 }
